--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,8 +10,8 @@
                 here is the about page. <br />
             </div>
             <div><a href="/rango">back to index</a></div>
-            <img src=" {%static '/images/rango.jpg'%}" alt = 'picture of rango'/>
+            <img src='{%static "/images/rango.jpg"%}' alt = 'picture of rango'/>
             <div>{{message}}</div>
-            <img src = "{{MEDIA_URL}}cat.jpg",alt = "Picture of a cat"/>
+            <img src = "{{MEDIA_URL}}cat.jpg",alt = "Picture of a Cat.?"/>
         </body>
     </html>
