--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,5 +12,6 @@
             <div><a href="{% url 'rango:index'%}">back to index</a></div>
             <img src='{%static "/images/rango.jpg"%}' alt = 'picture of rango'/>
             <div>{{message}}</div>
+            <div>Visits: {{visits}}</div>
             <img src = "{{MEDIA_URL}}cat.jpg",alt = "Picture of a Cat.?"/>
 {% endblock %}
